--- a/scss/modules/m-sticket.scss
+++ b/scss/modules/m-sticket.scss
@@ -224,6 +224,7 @@
 			white-space: pre-line;
 			word-break: break-word;
 			line-height: 1.7rem;
+			font-size: 1.1rem;
 			color: transparent;
 
 			.sticketDescription {
